--- a/itemGroupList.html
+++ b/itemGroupList.html
@@ -13,7 +13,7 @@ h1{ text-align: center;}
 <body>
 
 <h1>All Item Group List</h1>
-<a href="main.html"> Main</a>
+<a href="index.html"> Main</a>
 <p>[</p><ol><li>{<ul><li><span>"id"</span>: <span>1</span>,</li><li><span>"groupName"</span>: <span>"Food"</span></li></ul>},</li><li><a></a>{<ul><li><span>"id"</span>: <span>2</span>,</li><li><span>"groupName"</span>: <span>"Other"</span></li></ul>}</li></ol>]<p></p>
 </body>
 </html>
