--- a/itemList.html
+++ b/itemList.html
@@ -12,7 +12,7 @@ h1{ text-align: center;}
 </head>
 <body>
 <h1>All Item Sub Group List</h1>
-<a href="main.html"> Main</a>
-<p>[</p><ol><li>{<ul><li><span>"id"</span>: <span>1</span>,</li><li><span>"subGroupName"</span>: <span>"Rice"</span></li></ul>},</li><li><a></a>{<ul><li><span>"id"</span>: <span>2</span>,</li><li><span>"subGroupName"</span>: <span>"Oil"</span></li></ul>}</li></ol>]<p></p>
+<a href="index.html"> Main</a>
+<p>[</p><ol><li>{<ul><li><span>"id"</span>: <span>1</span>,</li><li><span>"itemName"</span>: <span>"Miniket"</span></li></ul>},</li><li><a></a>{<ul><li><span>"id"</span>: <span>2</span>,</li><li><span>"itemName"</span>: <span>"Najir Shail"</span></li></ul>}</li></ol>]<p></p>
 </body>
 </html>
