--- a/stockReport.html
+++ b/stockReport.html
@@ -20,7 +20,7 @@ table, th, td {
 </head>
 <body>
 <h1>Stock Report</h1>
-<a href="index.html">Main</a>
+<a href="index.html">Index</a>
 <p>
 <label>Organization Name :</label> 
 <input type="text" name="organizationId" value="Organization Name"> flex or tree
