--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h1{ text-align: center;}
 <a>Edit</a><br/>
 <h3>Demand</h3>
 <a href="demand.html">Create</a><br/>
-<a href="itemList.html">All List</a><br/>
+<a href="demandList.html">All List</a><br/>
 <a>Get By Id</a><br/>
 <a>Delete</a><br/>
 <a>Edit</a><br/>
