--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ h1{ text-align: center;}
 <a>Edit</a><br/>
 <h3>Damage</h3>
 <a href="damage.html">Create</a><br/>
-<a href="itemList.html">All List</a><br/>
+<a href="damageList.html">All List</a><br/>
 <a>Get By Id</a><br/>
 <a>Delete</a><br/>
 <a>Edit</a><br/>
