--- a/itemList.html
+++ b/itemList.html
@@ -11,8 +11,24 @@ h1{ text-align: center;}
 </style>
 </head>
 <body>
-<h1>All Item Sub Group List</h1>
+<h1>All Item List</h1>
 <a href="index.html"> Main</a>
-<p>[</p><ol><li>{<ul><li><span>"id"</span>: <span>1</span>,</li><li><span>"itemName"</span>: <span>"Miniket"</span></li></ul>},</li><li><a></a>{<ul><li><span>"id"</span>: <span>2</span>,</li><li><span>"itemName"</span>: <span>"Najir Shail"</span></li></ul>}</li></ol>]<p></p>
+<p>[</p><ol><li>
+{<ul>
+<li><span>"id"</span>: <span>1</span>,</li>
+<li><span>"itemName"</span>: <span>"Miniket"</span></li><li><span>"ItemFeature"</span>: {<ul>
+<li><span>"type"</span>: <span>"Brand"</span>,</li>
+<li><span>"name"</span>: <span>"Low"</span></li></ul>} <span>,</span> <br/>
+{<ul>
+<li><span>"type"</span>: <span>"Country of Origin"</span>,</li>
+<li><span>"name"</span>: <span>"China"</span></li></ul>}</li>
+</ul>},
+</li><li><a></a>{<ul><li><span>"id"</span>: <span>2</span>,</li><li><span>"itemName"</span>: <span>"Najir Shail"</span></li><li><span>"ItemFeature"</span>: {<ul>
+<li><span>"type"</span>: <span>"Brand"</span>,</li>
+<li><span>"name"</span>: <span>"High"</span></li></ul>} <span>,</span> <br/>
+{<ul>
+<li><span>"type"</span>: <span>"Country of Origin"</span>,</li>
+<li><span>"name"</span>: <span>"USA"</span></li></ul>}</li></ul>}</li></ol>]<p></p>
 </body>
 </html>
+
