--- a/item.html
+++ b/item.html
@@ -40,6 +40,16 @@ table, th, td {
 <input type="text" name="itemName">
 </p>
 <p>
+<label>UOM</label> 
+<select id="uom" name="uom">
+        <option value="KG">KG</option>
+        <option value="Litter">litter</option>
+        <option value="Dozen">Dozen</option>
+        <option value="Piece">Piece</option>
+        <option value="Pack">Pack</option>
+</select>
+</p>
+<p>
 <p> 
 <p>
 <label>Feature Type</label> 
