--- a/item.html
+++ b/item.html
@@ -20,7 +20,7 @@ table, th, td {
 <body>
 
 <h1>Item</h1>
-<a href="index.html">Main</a>
+<a href="index.html">Main Page</a>
 <p>
 <label>Group</label> 
 <select id="itemSubGroupId" name="itemSubGroup">
