--- a/item.html
+++ b/item.html
@@ -86,8 +86,8 @@ table, th, td {
 {<ul>
 <li><span>"id"</span>: <span>null</span>,</li>
 <li><span>"itemSubGroupId"</span>: <span>1</span>,</li>
-<li><span>"itemName"</span>: <span>"Miniket"</span></li>
-<li><span>"uom"</span>: <span>"KG"</span></li>
+<li><span>"itemName"</span>: <span>"Miniket"</span>,</li>
+<li><span>"uom"</span>: <span>"KG"</span>,</li>
 <li><span>"ItemFeature"</span>: {<ul>
 <li><span>"type"</span>: <span>Brand</span>,</li>
 <li><span>"name"</span>: <span>Low</span></li></ul>} <span>,</span>
