--- a/issue.html
+++ b/issue.html
@@ -118,7 +118,12 @@ table, th, td {
 {<ul>
 <li><span>"id"</span>: <span>null</span>,</li>
 <li><span>"benefitItemId"</span>: <span>1</span>,</li>
-<li><span>"demandId"</span>: <span>1</span>,</li>
+<li><span>"demandList"</span>: {<ul>
+<li><span>"demandId"</span>: <span>1</span></li>
+</ul>} , <br/>
+{<ul>
+<li><span>"demandId"</span>: <span>2</span></li>
+</ul>},</li>
 <li><span>"requestedTo"</span>: <span>Organization ID</span></li>  
 <li><span>"InvItem"</span>: {<ul>
 <li><span>"itemId"</span>: <span>1</span>,</li>
