--- a/item.html
+++ b/item.html
@@ -40,6 +40,10 @@ table, th, td {
 <input type="text" name="itemName">
 </p>
 <p>
+<label>Item SKU</label> 
+<input type="text" name="itemSKU">
+</p>  
+<p>
 <label>UOM</label> 
 <select id="uom" name="uom">
         <option value="KG">KG</option>
@@ -87,6 +91,7 @@ table, th, td {
 <li><span>"id"</span>: <span>null</span>,</li>
 <li><span>"itemSubGroupId"</span>: <span>1</span>,</li>
 <li><span>"itemName"</span>: <span>"Miniket"</span>,</li>
+<li><span>"itemSKU"</span>: <span>"CODE-001"</span>,</li>
 <li><span>"uom"</span>: <span>"KG"</span>,</li>
 <li><span>"ItemFeature"</span>: {<ul>
 <li><span>"type"</span>: <span>Brand</span>,</li>
