--- a/item.html
+++ b/item.html
@@ -22,25 +22,25 @@ table, th, td {
 <h1>Item</h1>
 <a href="index.html">Main Page</a>
 <p>
-<label>Group</label> 
+<label>Group : </label> 
 <select id="itemSubGroupId" name="itemSubGroup">
         <option value="1">Food</option>
         <option value="2">other</option>
 </select>
 </p>
 <p>
-<label>Sub Group</label> 
+<label>Sub Group : </label> 
 <select id="itemGroupId" name="itemGroup">
         <option value="1">Rice</option>
         <option value="2">Oil</option>
 </select>
 </p>
 <p>
-<label>Item Name</label> 
+<label>Item Name : </label> 
 <input type="text" name="itemName">
 </p>
 <p>
-<label>Item SKU</label> 
+<label>Item SKU : </label> 
 <input type="text" name="itemSKU">
 </p>  
 <p>
